assets/css/print.css
@media print {
    /* All your print styles go here  */
    /* be print-friendly */
   
    

	@page { margin: 1.5cm 2cm; } 
	html {font-size: 9pt!important; } 
	body { max-width: 27cm; }
	p { orphans: 2; widows: 2; }
	caption, figcaption { page-break-before: avoid; }
	h2, h3, h4, h5 { page-break-after: avoid;}
	.noprint, body>nav, section:after { display: none; }
	.row { flex-direction: row; }

    main, body{
        background-color: #fff;
        padding: 0;
        max-width: unset;
    }
   

    footer,
    nav
    {
        display: none !important;
    }

    .codeblock, blockquote {
        border: 1px solid black;
        padding: 2px;
        background-color: white !important;

    }

    code {
        overflow: hidden;
        line-break: anywhere;
        width: 100%;
    }

    .highlight{
        overflow: hidden;
    }
/* 
    pre{
        white-space:pre-wrap;
         word-wrap:break-word;
         overflow: auto;
    } */

    pre > code {
        white-space: pre-wrap;
        word-wrap: break-word;
        /* display: block; */
        /* overflow-x: hidden; */
        /* width: fit-content; */
    }

    .lntable td:nth-child(1){
        display: none;
    }

    .lntable td:nth-child(1){
        display: none;
    }

    .lntable td:nth-child(2) pre code .line:nth-child(even) {
        background-color: bisque !important;
    }


    h1{
        margin-block-start: 0;
    }

    .chroma, html { 
        /* color: var(--cfg);  */
        background-color: unset;
     }

     math {
        /* display: inline-block; */
        padding: 1rem 0;
        /* overflow: hidden; */
        font-family: "IBM Plex Math", math, sans-serif, serif !important;
        max-width: 100%;
    }
}

